apply plugin: 'com.android.application'

android {
    compileSdkVersion 29
    buildToolsVersion "29.0.2"

    defaultConfig {
        applicationId "com.pc"
        minSdkVersion 26
        targetSdkVersion 29
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        compileOptions {
            sourceCompatibility JavaVersion.VERSION_1_8
            targetCompatibility JavaVersion.VERSION_1_8
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.6'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
    implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
    implementation 'androidx.drawerlayout:drawerlayout:1.0.0'

    implementation 'com.google.android.gms:play-services-maps:17.0.0'
    implementation 'com.google.android.gms:play-services-location:17.0.0'
    implementation 'com.google.android.material:material:1.3.0-alpha01'

    implementation 'com.jakewharton.timber:timber:4.7.1'

    implementation 'com.squareup.okio:okio:2.2.2'
    implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.1'
   
    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
    implementation 'androidx.core:core:1.1.0'
    implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
    implementation 'com.android.support:multidex:2.0.0'
    implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
    implementation 'androidx.databinding:databinding-runtime:3.5.1'
    implementation 'androidx.databinding:databinding-adapters:3.5.1'
    implementation 'com.squareup.okhttp3:okhttp:4.2.1'
    implementation 'com.romandanylyk:pageindicatorview:1.0.3@aar'
    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
    implementation 'de.hdodenhof:circleimageview:3.0.1'
    implementation 'androidx.navigation:navigation-fragment:2.2.2'
    implementation 'androidx.navigation:navigation-ui:2.2.2'
    configurations {
        implementation.exclude group: 'org.jetbrains', module: 'annotations'
    }
    androidTestImplementation 'androidx.test:rules:1.2.0'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
    androidTestImplementation 'androidx.test:core:1.2.0'
    testImplementation 'junit:junit:4.12'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'org.jetbrains:annotations-java5:15.0'
    implementation 'com.jakewharton:butterknife:10.1.0'
    implementation 'com.loopj.android:android-async-http:1.4.9'
    api 'com.google.guava:guava:28.0-android'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
    implementation 'org.projectlombok:lombok:1.18.12'

    implementation 'com.androidmapsextensions:android-maps-extensions:2.4.0'
    implementation 'com.google.android.gms:play-services-maps:10.2.0'
}
